<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.firstapp.hytripplan.toolbar.CustomToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:app_title="@string/app_name"
        />

    <TextView
        android:id="@+id/tv_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_membership"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:id="@+id/tv_id"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:text="@string/ID"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_join"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_id"
        app:layout_constraintTop_toTopOf="@+id/et_id"/>
    <EditText
        android:id="@+id/et_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_id"
        app:layout_constraintLeft_toRightOf="@id/tv_id"
        app:layout_constraintTop_toBottomOf="@id/tv_join"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/PW"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/et_pw"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_pw"
        app:layout_constraintLeft_toRightOf="@id/tv_pw"
        app:layout_constraintTop_toBottomOf="@id/et_id"
        app:layout_constraintTop_toTopOf="@+id/tv_pw"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pw"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/tv_pw"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw"
        app:layout_constraintRight_toLeftOf="@+id/et_name"
        app:layout_constraintBottom_toBottomOf="@+id/et_name"
        app:layout_constraintTop_toTopOf="@+id/et_name"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/join_name"
        app:layout_constraintLeft_toRightOf="@id/tv_num"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tv_num"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/phone_num"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintRight_toLeftOf="@+id/et_num"
        app:layout_constraintBottom_toBottomOf="@+id/et_num"
        app:layout_constraintTop_toTopOf="@+id/et_num"/>
    <EditText
        android:id="@+id/et_num"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/join_number"
        app:layout_constraintLeft_toRightOf="@id/tv_num"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_num"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginEnd="5dp"
        android:text="@string/cancel"

        app:layout_constraintTop_toBottomOf="@+id/tv_num"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_btn"
        app:layout_constraintTop_toTopOf="@id/cancel_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginLeft="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>