<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.firstapp.hytripplan.toolbar.CustomToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:app_title="@string/app_name"
        />

    <EditText
        android:id="@+id/insert_id"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.2"
        />

    <EditText
        android:id="@+id/insert_pw"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_pw"

        app:layout_constraintLeft_toLeftOf="@id/insert_id"
        app:layout_constraintTop_toBottomOf="@id/insert_id"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textSize="17dp"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toTopOf="@id/insert_id"
        app:layout_constraintBottom_toBottomOf="@id/insert_pw"
        app:layout_constraintLeft_toRightOf="@id/insert_id"
        android:layout_marginLeft="15dp"

        />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/google_login"
        android:textSize="17dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/insert_pw"
        app:layout_constraintLeft_toLeftOf="@id/insert_pw"
        app:layout_constraintRight_toRightOf="@+id/login_btn"
        />


    <Button
        android:id="@+id/research_pw_id_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginEnd="5dp"
        android:text="@string/find_id_pw"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/google_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/register_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_up_member"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/research_pw_id_btn"
        app:layout_constraintTop_toTopOf="@id/research_pw_id_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginLeft="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>