<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">



    <TextView
        android:id="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_packing"
        android:textSize="30dp"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="@+id/btn_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btn_edit"
        android:layout_marginRight="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/btn_edit"
        />
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintHorizontal_chainStyle="packed"
        />


    <CheckBox
        android:id="@+id/checkbox_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        app:layout_constraintTop_toBottomOf="@+id/tv_main"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/tv_main"
        />
    <TextView
        android:id="@+id/tv_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

</androidx.constraintlayout.widget.ConstraintLayout>