<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.firstapp.hytripplan.toolbar.CustomToolbar
        app:app_title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/add_space_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/local_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="23dp"
            android:visibility="visible"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/space_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/space_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textSize="20dp"
                android:visibility="visible"
                android:textColor="@color/textColorPrimary"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>