<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/trip_head"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        />
    <TextView
        android:id="@+id/tv_trip_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/plan_name"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.02"
        />
        <TextView
            android:id="@+id/tv_trip_period"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:text="@string/period"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_trip_name"
            app:layout_constraintRight_toLeftOf="@+id/btn_change"
            app:layout_constraintStart_toStartOf="@+id/tv_trip_name"/>
        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/change_schedule"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintTop_toBottomOf="@+id/tv_trip_period"
            />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_user"
        app:layout_constraintRight_toLeftOf="@+id/btn_change"
        app:layout_constraintTop_toTopOf="@+id/btn_change"
        android:layout_marginRight="10dp"
        />

    <ImageView
        android:id="@+id/img_day"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/trip_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day1"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/img_day"
        app:layout_constraintBottom_toBottomOf="@+id/img_day"
        app:layout_constraintLeft_toLeftOf="@+id/img_day"
        app:layout_constraintRight_toRightOf="@+id/img_day"
        />
    <ImageView
        android:id="@+id/img_day2"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/trip_head"
        app:layout_constraintLeft_toRightOf="@+id/img_day"
        android:layout_margin="10dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day1"
        android:textColor="@color/textColorPrimary"
        android:textStyle="bold"

        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/trip_head"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        />
    <ImageView
        android:id="@+id/img_check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icon_check"
        app:layout_constraintTop_toBottomOf="@+id/tv_day"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.07"
        />
    <TextView
        android:id="@+id/tv_space_name1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textSize="17dp"
        android:textStyle="bold"

        app:layout_constraintLeft_toRightOf="@+id/img_check1"
        app:layout_constraintTop_toTopOf="@+id/img_check1"
        app:layout_constraintBottom_toBottomOf="@+id/img_check1"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:id="@+id/img_map_down1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_iconfinder_157_twitter_location_map_"
        app:layout_constraintTop_toTopOf="@+id/img_check1"
        app:layout_constraintBottom_toBottomOf="@+id/img_check1"
        app:layout_constraintLeft_toRightOf="@+id/tv_space_name1"
        />
    <ImageView
        android:id="@+id/img_check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icon_check"
        app:layout_constraintTop_toBottomOf="@+id/img_check1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.07"
        />
    <TextView
        android:id="@+id/tv_space_name2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textSize="17dp"
        android:textStyle="bold"

        app:layout_constraintLeft_toRightOf="@+id/img_check2"
        app:layout_constraintTop_toTopOf="@+id/img_check2"
        app:layout_constraintBottom_toBottomOf="@+id/img_check2"
        android:layout_marginLeft="10dp"
        />

    <ImageView
        android:id="@+id/img_map_down2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_iconfinder_157_twitter_location_map_"
        app:layout_constraintTop_toTopOf="@+id/img_check2"
        app:layout_constraintBottom_toBottomOf="@+id/img_check2"
        app:layout_constraintLeft_toRightOf="@+id/tv_space_name2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>